Working App with weird widget

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
     <application
       android:name=".MainApplication"
@@ -22,5 +24,36 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      <activity
+        android:name=".FullscreenActivity"
+        android:showOnLockScreen="true"
+        android:turnScreenOn="true"
+        android:excludeFromRecents="true"
+        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
+        android:launchMode="singleInstance"
+        android:taskAffinity=""
+        android:screenOrientation="portrait"
+        android:showWhenLocked="true" />
+      <service
+        android:name="app.notifee.core.NotifeeForegroundService"
+        android:enabled="true"
+        android:exported="false" />
+      <!-- Notifee boot receiver (reschedules triggers after device reboot) -->
+      <receiver
+          android:name="app.notifee.core.receiver.NotifeeBootEventReceiver"
+          android:exported="false">
+          <intent-filter>
+              <action android:name="android.intent.action.BOOT_COMPLETED" />
+              <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
+          </intent-filter>
+      </receiver>
+      <receiver android:name=".WorkoutWidgetProvider" android:exported="false">
+          <intent-filter>
+              <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+          </intent-filter>
+          <meta-data
+              android:name="android.appwidget.provider"
+              android:resource="@xml/my_widget_info"/>
+      </receiver>
     </application>
 </manifest>
