--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -36,4 +36,9 @@ newArchEnabled=true
 
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
-hermesEnabled=true
+hermesEnabled=false
+JS_ENGINE=jsc
+MYAPP_UPLOAD_STORE_FILE=my-release-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=fD270825
+MYAPP_UPLOAD_KEY_PASSWORD=fD270825
